src/scss/components/_prism.scss
/* PrismJS 1.29.0
https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript+abap+abnf+actionscript+ada+agda+al+antlr4+apacheconf+apex+apl+applescript+aql+arduino+arff+armasm+arturo+asciidoc+aspnet+asm6502+asmatmel+autohotkey+autoit+avisynth+avro-idl+awk+bash+basic+batch+bbcode+bbj+bicep+birb+bison+bnf+bqn+brainfuck+brightscript+bro+bsl+c+csharp+cpp+cfscript+chaiscript+cil+cilkc+cilkcpp+clojure+cmake+cobol+coffeescript+concurnas+csp+cooklang+coq+crystal+css-extras+csv+cue+cypher+d+dart+dataweave+dax+dhall+diff+django+dns-zone-file+docker+dot+ebnf+editorconfig+eiffel+ejs+elixir+elm+etlua+erb+erlang+excel-formula+fsharp+factor+false+firestore-security-rules+flow+fortran+ftl+gml+gap+gcode+gdscript+gedcom+gettext+gherkin+git+glsl+gn+linker-script+go+go-module+gradle+graphql+groovy+haml+handlebars+haskell+haxe+hcl+hlsl+hoon+http+hpkp+hsts+ichigojam+icon+icu-message-format+idris+ignore+inform7+ini+io+j+java+javadoc+javadoclike+javastacktrace+jexl+jolie+jq+jsdoc+js-extras+json+json5+jsonp+jsstacktrace+js-templates+julia+keepalived+keyman+kotlin+kumir+kusto+latex+latte+less+lilypond+liquid+lisp+livescript+llvm+log+lolcode+lua+magma+makefile+markdown+markup-templating+mata+matlab+maxscript+mel+mermaid+metafont+mizar+mongodb+monkey+moonscript+n1ql+n4js+nand2tetris-hdl+naniscript+nasm+neon+nevod+nginx+nim+nix+nsis+objectivec+ocaml+odin+opencl+openqasm+oz+parigp+parser+pascal+pascaligo+psl+pcaxis+peoplecode+perl+php+phpdoc+php-extras+plant-uml+plsql+powerquery+powershell+processing+prolog+promql+properties+protobuf+pug+puppet+pure+purebasic+purescript+python+qsharp+q+qml+qore+r+racket+cshtml+jsx+tsx+reason+regex+rego+renpy+rescript+rest+rip+roboconf+robotframework+ruby+rust+sas+sass+scss+scala+scheme+shell-session+smali+smalltalk+smarty+sml+solidity+solution-file+soy+sparql+splunk-spl+sqf+sql+squirrel+stan+stata+iecst+stylus+supercollider+swift+systemd+t4-templating+t4-cs+t4-vb+tap+tcl+tt2+textile+toml+tremor+turtle+twig+typescript+typoscript+unrealscript+uorazor+uri+v+vala+vbnet+velocity+verilog+vhdl+vim+visual-basic+warpscript+wasm+web-idl+wgsl+wiki+wolfram+wren+xeora+xml-doc+xojo+xquery+yaml+yang+zig */
/**
* prism.js default theme for JavaScript, CSS and HTML
* Based on dabblet (http://dabblet.com)
* @author Lea Verou
*/

.code-code {
  text-align: left;
  word-spacing: normal;
  word-break: normal;
  word-wrap: normal;
  direction: ltr;
  tab-size: 4;
  hyphens: none;
}

.prism-token.prism-comment,
.prism-token.prism-prolog,
.prism-token.prism-doctype,
.prism-token.prism-cdata {
  // color: slategray;
  color: var(--secondary-text-color);

  .night & {
    opacity: .5;
  }
}

.prism-token.prism-punctuation {
  // color: #999;
  color: var(--secondary-text-color);
}

.prism-token.prism-namespace {
  opacity: .7;
}

.prism-token.prism-property,
.prism-token.prism-tag,
.prism-token.prism-boolean,
.prism-token.prism-number,
.prism-token.prism-constant,
.prism-token.prism-symbol,
.prism-token.prism-deleted {
  // color: #905;
  color: var(--danger-color);
}

.prism-token.prism-selector,
.prism-token.prism-attr-name,
.prism-token.prism-string,
.prism-token.prism-char,
.prism-token.prism-builtin,
.prism-token.prism-inserted {
  // color: #690;
  color: var(--primary-text-color);
}

.prism-token.prism-operator,
.prism-token.prism-entity,
.prism-token.prism-url,
.prism-language-css .prism-token.prism-string,
.prism-style .prism-token.prism-string {
  color: var(--danger-color);
  // color: var(--primary-color);
}

.prism-token.prism-atrule,
.prism-token.prism-attr-value,
.prism-token.prism-keyword {
  // color: #07a;
  color: var(--primary-color);

  .night & {
    color: var(--danger-color);
  }
}

.prism-token.prism-function,
.prism-token.prism-class-name {
  // color: #DD4A68;
  color: var(--danger-color);

  .night & {
    color: var(--primary-text-color);
  }
}

.prism-token.prism-regex,
.prism-token.prism-important,
.prism-token.prism-variable {
  // color: #e90;
  color: var(--warning-color);
}

.prism-token.prism-important,
.prism-token.prism-bold {
  font-weight: bold;
}
.prism-token.prism-italic {
  font-style: italic;
}

.prism-token.prism-entity {
  cursor: help;
}

